//Gen by 测试用配置.xlsx\测试用配置
syntax = "proto3";
message TestConfig
{
    int32 ID = 1;
    string Name = 2;
}


message TestConfigList
{
    repeated TestConfig dataList = 1;
}
